fix the scrollbar UI jump

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,4 +55,8 @@
         border: 1px solid #ffffff;
         box-shadow: 0px 0px 10.25px 0px rgba(148, 148, 148, 0.25);
     }
+
+    html {
+        scrollbar-gutter: stable;
+    }
 }
